...
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/profileSections"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/leaveProfileButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/leave_profile_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
...
            android:text="@string/profile_username_label"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/profileName" />

        <EditText
            android:id="@+id/profileUsername"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:enabled="false"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
...
                android:ems="10"
                android:enabled="false"
                android:inputType="textPassword"
                android:password="true" />

            <Button
                android:id="@+id/showPasswordButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/show_password_button" />

        </LinearLayout>
...
            app:layout_constraintTop_toBottomOf="@+id/passwordEntryBox" />

        <TableLayout
            android:id="@+id/profilePreferences"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@+id/editProfileButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profilePreferencesLabel">

            <TableRow
                android:id="@+id/vegetarianVeganRow"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Switch
                    android:id="@+id/vegetarianSwitch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="false"
                    android:text="@string/vegetarian_switch" />

                <Switch
                    android:id="@+id/veganSwitch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="false"
                    android:text="@string/vegan_switch" />

            </TableRow>
...
            <TableRow
                android:id="@+id/glutenFreeHalalRow"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Switch
                    android:id="@+id/glutenFreeSwitch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="false"
                    android:text="@string/gluten_free_switch" />

                <Switch
                    android:id="@+id/halalSwitch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="false"
                    android:text="@string/halal_switch" />
            </TableRow>

            <TableRow
                android:id="@+id/kosherHumaneRow"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Switch
                    android:id="@+id/kosherSwitch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="false"
                    android:text="@string/kosher_switch" />

                <Switch
                    android:id="@+id/humaneSwitch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="false"
                    android:text="@string/humane_switch" />
            </TableRow>

            <TableRow
                android:id="@+id/seafoodFarmToForkRow"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Switch
                    android:id="@+id/seafoodSwitch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="false"
                    android:text="@string/seafood_switch" />

                <Switch
                    android:id="@+id/farmToForkSwitch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="false"
                    android:text="@string/farm_to_fork_switch" />
            </TableRow>
        </TableLayout>

        <Button
            android:id="@+id/editProfileButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/edit_profile_button"
            app:layout_constraintBottom_toTopOf="@+id/logOutButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profilePreferences" />

        <Button
            android:id="@+id/logOutButton"
...
