...
            app:layout_constraintBottom_toTopOf="@id/menuDateLabel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <Button
                android:id="@+id/optionsButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/options_button_label" />

            <TextView
...
                android:layout_height="wrap_content"

                android:layout_weight="1"
                android:text="@string/app_name" />

            <Button
                android:id="@+id/profileButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/profile_button_default" />

        </LinearLayout>
...

        <TextView
            android:id="@+id/menuDateLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/menu_date_label"
            app:layout_constraintBottom_toTopOf="@+id/menuDateSelect"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/dateFormatLabel" />

        <EditText
            android:id="@+id/menuDateSelect"
...
            app:layout_constraintBottom_toTopOf="@+id/menuSelectPrompt"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/menuDateLabel" />

        <Button
            android:id="@+id/setDateButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date_set_button"
            app:layout_constraintBottom_toTopOf="@+id/menuSelectPrompt"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
...
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/menuSelectPrompt">

            <Button
                android:id="@+id/deeceButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/deece_button" />

            <Button
                android:id="@+id/retreatButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/retreat_button" />

            <Button
                android:id="@+id/expressButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/express_button" />

            <Button
                android:id="@+id/foodTruckButton"
...
