...
            android:id="@+id/toolbar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@color/Vassar"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme"
            app:layout_constraintBottom_toTopOf="@id/exitMenuButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/dateAndLocationLabel"
...
            app:layout_constraintBottom_toBottomOf="@id/toolbar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/toolbar">

            <TextView
                android:id="@+id/menuLocation"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textColor="#FFFFFF"
                tools:text="menuLocation" />

            <TextView
                android:id="@+id/menuDate"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textColor="#FFFFFF"
                tools:text="menuDate" />

...
                    android:id="@+id/menuLinearLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/validDateButUnavailable"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/valid_date_but_unavailable"
                        android:visibility="gone" />
                </LinearLayout>
            </ScrollView>

        </LinearLayout>

...
